@@ -175,6 +175,10 @@ the responsibility of Carlo Cavazzoni.
 Contributors to \qe, beyond the authors of the paper 
 mentioned in Sect.\ref{SubSec:Terms}, include:
 \begin{itemize}
+  \item Sebastiano Caravati for direct support of GTH pseudopotentials
+  in analytical form
+  from external codes (see the \texttt{COUPLE} sub-directory), made the
+  parallelization more modular and usable by external codes;
   \item Axel Kohlmeyer for libraries and utilities to call \qe\
   from external codes (see the \texttt{COUPLE} sub-directory), made the
   parallelization more modular and usable by external codes;
